# spice-lib

./: .gitignore  .gitmodules  .travis.yml  Brewfile  CMakeLists.txt  CNAME  CONTRIBUTING.md  INSTALL.md  README.md  algorithm_8hpp.html  annotated.html  benchmark.sh  classcolor__view.html  classspice_1_1color.html  classspice_1_1color__view.html  classspice_1_1image.html  clean.sh  color__view_8hpp.html  conan_profile.in  conanfile.txt  configure.sh  convolution_8hpp.html  files.html  function_8hpp.html  index.html  md_doc__c_o_n_t_r_i_b_u_t_i_n_g.html  md_doc__i_n_s_t_a_l_l.html  modules.html  namespaces.html  namespacespice.html  namespacespice_1_1convolve.html  namespacespice_1_1function.html  namespacespice_1_1helpers.html  namespacespice_1_1print.html  namespacespice_1_1statistics.html  namespacespice_1_1threshold.html  namespacestd.html  pages.html  print_8hpp.html  searchdata-v1.js  (+4 more)
.github/workflows/: ci.yml  ci_linux.yml  ci_macos.yml  ci_vfx_reference_platform_2021.yml
benchmark/: CMakeLists.txt  convolution.benchmark.cpp  convolution.spatial.benchmark.cpp  image.add.benchmark.cpp  image.benchmark.cpp  image.load_image.benchmark.cpp
ci/: install-linux.sh  install-osx.sh  travis.sh
ci/github/: build-documentation-unix.sh  build-tests-macos.sh  build-tests-unix.sh  configure-centos.sh  configure-linux.sh  configure-macos.sh  configure-unix.sh  install-centos.sh  install-for-documentation-linux.sh  install-for-documentation-macos.sh  install-linux.sh  install-macos.sh  publish-documentation-unix.sh  test-macos.sh  test-unix.sh
cmake/: CompilerInfo.cmake  ConanSetup.cmake  PlatformInfo.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile-mcss  conf.py  index.md
generators/: CMakeLists.txt  README.md  adaptive_threshold_generator.cpp  add_buffer_scalar_generator.cpp  add_buffers_generator.cpp  divide_buffer_scalar_generator.cpp  divide_buffers_generator.cpp  multiply_buffer_scalar_generator.cpp  multiply_buffers_generator.cpp  multiply_complex_buffers_generator.cpp  spatial_convolution_generator.cpp  subtract_buffer_scalar_generator.cpp  subtract_buffers_generator.cpp
include/spice/: image.hpp  print.hpp  statistics.hpp
include/spice-lib/: algorithm.hpp  color.hpp  color_view.hpp  convolution.hpp  function.hpp  image.hpp  noise_reduction.hpp  print.hpp  spatial_filtering.hpp  statistics.hpp  threshold.hpp
tests/: CMakeLists.txt  algorithm.test.cpp  color.test.cpp  color_view.test.cpp  convolution.test.cpp  function.test.cpp  image.test.cpp  noise_reduction.test.cpp  test_utils.hpp  threshold.test.cpp
tools/: test_utils.hpp
